<resources>
    <string name="app_name">Just Pizza</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="recipes">Recetas</string>
    <string name="error_message">Oh no, se ha quemado la pizza :(</string>
    <string name="retry">Reintentar</string>
    <string name="ingredients">Ingredientes:</string>
    <string name="ingredientChipFormat">%1$s: %2$s %3$s</string>
    <string name="ingredientChipWithoutQtyFormat">%1$s: %2$s</string>
    <string name="gramsUnit">g</string>
    <string name="clUnit">cl</string>
    <string name="qtyUnit" />
    <string name="hardDifficulty">Difícil</string>
    <string name="mediumDifficulty">Media</string>
    <string name="easyDifficulty">Fácil</string>
    <string name="difficulty">Dificultad:</string>
    <string name="time">Tiempo:</string>
    <string name="minUnit">minutos</string>
    <string name="recipe">Receta:</string>
    <string name="steps">Pasos:</string>
    <string name="spoonUnit">Cda</string>
    <string name="customUnit">al gusto</string>
    <string name="mlUnit">ml</string>
    <string name="welcome_login">Bienvenido a JustPizza.</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="signin">Registrar</string>
    <string name="login">Acceder</string>
    <string name="signinGoogle">Accede con Google</string>
    <string name="restaurants">Pizzerias</string>
</resources>
