<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/login_gradient"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        app:srcCompat="@drawable/pizza" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/welcome_login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailLogin"
        style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textColorHint="#AEFFFFFF"
        android:textSize="18sp"
        tools:text="email@email.com" />

    <EditText
        android:id="@+id/passwordLogin"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textWebPassword"
        android:textColor="@android:color/white"
        android:textColorHint="#AEFFFFFF"
        android:textSize="18sp"
        tools:text="unaContraseña123" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="4dp"
            android:text="@string/signin" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/colorDark"
            android:elevation="4dp"
            android:text="@string/login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/googleSignIn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:backgroundTint="#4885ED"
            android:elevation="4dp"
            android:text="@string/signinGoogle"
            app:icon="@drawable/googleg_standard_color_18"
            app:iconPadding="0dp" />
    </LinearLayout>

</LinearLayout>